--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 bevy = {version = "*", features = []}
+bevy-inspector-egui = "0.19.0"
 
 [profile.dev]
 opt-level = 1
