--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,12 @@ edition = "2021"
 bevy = {version = "*", features = []}
 bevy-inspector-egui = "0.19.0"
 
+# Dependencies for native only.
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+
+# Dependencies for WASM only.
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+
 [profile.dev]
 opt-level = 1
 
